--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       </div>  
     </section>
     <!-- /container -->
-    <script type="text/javascript" scr="js/jquery-3.1.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="ha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
     <script type='text/javascript' src='js/main.js'></script>
     <script type='text/javascript' src='js/donottouchthisfile.js'></script>
   </body>
